--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "burger",
   "version": "1.0.0",
   "description": "Burger app",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,6 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.10",
     "mysql": "^2.15.0"
-     },
-     "scripts": {
-       "start": "node server.js"
-     }
-   }
+  },
+  "devDependencies": {}
+}
